fix: fix a minor bug